# datalang

./: .gitignore  CMakeLists.txt  README.md
example/: mydatascript.dl  shopping_ext.dl  shopping_test.dl  test.dl  test.sql
include/: ast.h  interpreter.h  parser.h  utils.h
src/: interpreter.cpp  main.cpp  parser.cpp  utils.cpp
